--- a/app/templates/app/resources.html
+++ b/app/templates/app/resources.html
@@ -15,7 +15,7 @@
         <h2>Code</h2>    
           <p>We have some <a href="https://github.com/DCPython">code at GitHub</a>.</p>  
     </div>
-    <div class="col-lg-6">  
+    <div class="friends col-lg-6">  
         <h1>Friends Of DC Python</h1>
           <h3>DC PyLadies</h3>
             <ul class="list-unstyled">
