--- a/app/static/app/custom.css
+++ b/app/static/app/custom.css
@@ -1,2 +1,33 @@
 /* base.html - footer */
 .footer{margin-top:3em;border-top:1px solid #eee;padding-top:1em}
+
+/* resources.html - friends */
+.friends h3{margin-bottom:0}
+
+/* base-html - navbar */
+.navbar{border-radius:0}
+.navbar-inverse{
+border-color:#ccc;
+background-image: linear-gradient(bottom, rgb(245,245,245) 34%, rgb(232,232,232) 84%);
+background-image: -o-linear-gradient(bottom, rgb(245,245,245) 34%, rgb(232,232,232) 84%);
+background-image: -moz-linear-gradient(bottom, rgb(245,245,245) 34%, rgb(232,232,232) 84%);
+background-image: -webkit-linear-gradient(bottom, rgb(245,245,245) 34%, rgb(232,232,232) 84%);
+background-image: -ms-linear-gradient(bottom, rgb(245,245,245) 34%, rgb(232,232,232) 84%);
+
+background-image: -webkit-gradient(
+    linear,
+    left bottom,
+    left top,
+    color-stop(0.34, rgb(245,245,245)),
+    color-stop(0.84, rgb(232,232,232))
+);
+}
+.navbar-inverse .navbar-nav > li > a{color:#555}
+.navbar-inverse .navbar-nav > li > a, .navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse > 
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus{
+background-color:navy;
+}
+
+
+/* home.html - jumbotron */
+.jumbotron{margin-top:-1em}
